docs(agents): add AGENTS.md instructions and update project implementation guidelines